--- a/VIews/createpool.html
+++ b/VIews/createpool.html
@@ -9,32 +9,30 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
 </head>
 
-<body>
+<body style="font-family: poppins; font-weight: normal">
 		
 	
 <!--Create Pool Section Starts-->	
-<div class="container col-xl-6 col-lg-6 col-md-9 col-sm-9 col-12">
-  <form>
+<div class="container col-xl-6 col-lg-6 col-md-9 col-sm-9 col-12 mt-5">
+  <div class="row">
+	  <div class="col-xl-4 col-lg-4 col-md-8 col-sm-8 col-8 mx-auto text-center mb-3"><a class="navbar-brand text-light" href="index.html" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a></div>
+  </div>
+<form action="">
 	  <div class="form-group">
 	    <label for="poolName">Pool Name</label>
-	    <input type="text" class="form-control" id="poolName" placeholder="Enter pool name">
-	    <small id="emailHelp1" class="form-text text-muted">We'll never share your email with anyone else.</small> 
+	    <input type="text" class="form-control" id="poolName" name="poolName" placeholder="Enter pool name">
 	  </div>
 	  <div class="form-group">
-	    <label for="poolAsset">Pool Asset</label><br>
-	    <div class="btn-group bg-light">
-		    <button type="button" class="btn btn-lg">Select Asset</button>
-		    <button type="button" class="btn btn-lg dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span class="sr-only">Toggle Dropdown</span> </button>
-		    <div class="dropdown-menu">
-		      <h6 class="dropdown-header">AVAILABLE ASSETS</h6>
-		      <a class="dropdown-item" href="#">BNB</a> <a class="dropdown-item" href="#" >ETH</a> <a class="dropdown-item" href="#">cToken</a>
-		      <div class="dropdown-divider"></div>
-			</div>
-	    </div>
+	    <label for="asset">Select Asset</label>
+      <select class="form-control" id="asset" name="asset">
+        <option>BNB</option>
+        <option>ETH</option>
+        <option>cToken</option>
+      </select>
       </div>
 	  <div class="form-group">
 	    <label for="amount">Amount</label>
-	    <input type="number" class="form-control" id="amount" placeholder="Amount">
+	    <input type="number" class="form-control" id="amount" name="amount" placeholder="Amount">
       </div>
 	  <!--<div class="form-check">
 	    <input type="checkbox" class="form-check-input" id="exampleCheck1">
