--- a/VIews/index.html
+++ b/VIews/index.html
@@ -11,7 +11,7 @@
 
 <body class="bg-main" style="box-sizing: border-box; padding-top: 50px; background-color: #040319; color: #ffffff; font-family: poppins; font-weight: normal;">
 	<!--Navigation Bar Starts-->
-<nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark col-xl-8 col-lg-8 mx-auto"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
+<nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark col-xl-8 col-lg-8 mx-auto"><a class="navbar-brand light" href="JavaScript:void(0)" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent1">
     <ul class="navbar-nav">
