--- a/Views/createpool.html
+++ b/Views/createpool.html
@@ -7,17 +7,20 @@
 <title>CoinPool - Create Pool</title>
 <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+<script src="../js/script.js"></script>
 </head>
 
-<body style="font-family: poppins; font-weight: normal">
+<body style="font-family: Arial, Helvetica, sans-serif; font-weight: bold">
 		
 	
 <!--Create Pool Section Starts-->	
-<div class="container col-xl-6 col-lg-6 col-md-9 col-sm-9 col-12 mt-5 mb-5">
+<div class="container col-xl-6 col-lg-6 col-md-9 col-sm-9 col-12 mt-5">
   <div class="row">
-	  <div class="col-xl-4 col-lg-4 col-md-8 col-sm-8 col-8 mx-auto text-center mb-3"><a class="navbar-brand text-light" href="index.html" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png"  width="24px;"><span>COIN</span>POOL</a></div>
+	  <div class="col-xl-4 col-lg-4 col-md-8 col-sm-8 col-8 mx-auto text-center mb-3"><a class="navbar-brand text-light" href="index.html" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a></div>
   </div>
-<form action="" class="">
+<form action="" id="createPool">
 	  <div class="form-group">
 	    <label for="poolName">Pool Name</label>
 	    <input type="text" class="form-control" id="poolName" name="poolName" placeholder="Enter pool name">
@@ -34,6 +37,14 @@
 	    <label for="amount">Amount</label>
 	    <input type="number" class="form-control" id="amount" name="amount" placeholder="Amount">
       </div>
+      <div class="form-group">
+        <label for="stakeAsset">Select Staking Asset</label>
+        <select class="form-control" id="stakeAsset" name="stakeAsset">
+          <option>BNB</option>
+          <option>ETH</option>
+          <option>cToken</option>
+        </select>
+        </div>
 	  <!--<div class="form-check">
 	    <input type="checkbox" class="form-check-input" id="exampleCheck1">
 	    <label class="form-check-label" for="exampleCheck1">Check me out</label>
