--- a/Views/pool.html
+++ b/Views/pool.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="Refresh" content="30">
+<!-- <meta http-equiv="Refresh" content="30"> -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CoinPool - Pool Page</title>
 <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+<script src="../js/script.js"></script>
 </head>
 
 
-<body style="color: #ffffff; font-family: poppins; font-weight: normal;">
+<body style="color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
 	<!--Navigation Bar Starts-->
 <nav class="navbar fixed-top navbar-expand-lg bg-main navbar-dark col-xl-8 col-lg-8 mx-auto"><a class="navbar-brand light" href="#" style="font-family: poppins; font-weight: bold"><img src="../Includes/icons/pool.png" width="24px;"><span>COIN</span>POOL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -28,11 +31,11 @@
 <div class="container col-12 col-sm-12 col-md-6 col-lg-6 mt-5">
 		<div class="row text-center">
 	  <div class="col-xl-6 col-6 col-sm-6 col-md-6 col-lg-6">
-	    <button type="button" class="btn btn-lg btn-main">Create Pool</button>
+	    <a href="createpool.html" class="btn btn-lg btn-main">Create Pool</a>
 	  </div>
-	  <div class="col-xl-6 col-6 col-sm-6 col-md-6 col-lg-6">
+	  <!-- <div class="col-xl-6 col-6 col-sm-6 col-md-6 col-lg-6">
 	    <button type="button" class="btn btn-lg btn-warning">Join Pool</button>
-	  </div>
+	  </div> -->
 		</div>
 	</div>
 	<!--Create Pool and Join Pool Buttons Ends-->
@@ -42,9 +45,9 @@
 	
 	  <div class="row text-dark font-weight-bold text-left ml-2 align-content-center">
 	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">ACTIVE POOL DETAILS <img src="../Includes//icons/pool.png" width="20" alt="pool"></div>
+	    <!-- <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div>
 	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div>
-	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div>
-	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div>
+	    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 text-left">POOL ID:  <br>ASSET: </div> -->
       </div>
 	</div>
 	
@@ -52,12 +55,20 @@
 	
 	
 <!--Open Pools Section Starts-->
+<script> $(document).ready(function(){ $("#loadRunningPools").click(); });</script>
+<span class="hidden" id="loadRunningPools"></span>
 <div class="container col-12 col-sm-12 col-md-12 col-lg-8 col-xl-8 mt-4 mb-5">
-  <ul class="list-group text-dark font-weight-bold" style="font-family: poppins;">
-    <li class="list-group-item">List of Active (Open) Pools  </li>
-    <li class="list-group-item d-flex justify-content-between align-items-center"> List Group item 1 with badge
-      <button type="button" class="btn-warning btn-sm">Join</button>
-    </li>
+  <ul id="runningPools" class="list-group text-dark font-weight-bold" style="font-family: Arial, Helvetica, sans-serif;">
+    <!--  <h6 class="font-weight-bold my-0">BNBPool</h6>
+      <div class="d-flex justify-content-between align-items-center">
+        <div><small>Pool asset:</small> <code id="stakedETH">BNB</code></div>
+        <div><small>Asset amount:</small> <code id="stakedETH">0 ETH</code></div>
+        <div><small>Staking asset:</small> <code id="stakedETH">ETH</code></div>
+        <div><small>Staking asset amount:</small> <code id="stakedETH">0 ETH</code></div>
+        <div><small>Member status:</small> <code id="contributedETH">0/0</code></div>
+        <button type="button" class="btn-warning btn-sm joinPool" poolId="">Join</button>
+      </div>
+    </li> -->
   </ul>
 </div>
 <!--Open Pools Section Ends-->
