--- a/Views/vault.html
+++ b/Views/vault.html
@@ -7,17 +7,95 @@
 <title>CoinPool Vaults</title>
 <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+<script src="../js/script.js"></script>
 </head>
 
-<body style="font-family: poppins; font-weight: bold;">
+<body id="vault" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
 	<!--Accessibility block starts-->
 <div class="container mt-4">
 <div class="row col-12 col-md-12 col-sm-12 col-lg-4 mx-auto bg-light text-dark p-2 rounded-4 text-center">
 <div class="col-sm-4 col-xl-4 col-md-4 col-4"><img src="../Includes/icons/tf.png" alt="swap" width="33"><br>SWAP</div>
-<div class="col-sm-4 col-xl-4 col-md-4 col-4"><img src="../Includes/icons/send.png" alt="send" width="33"><br>SEND</div>
-<div class="col-sm-4 col-xl-4 col-md-4 col-4"><img src="../Includes/icons/qr.png" alt="receive" width="33"><br>RECEIVE</div>
+<div class="col-sm-4 col-xl-4 col-md-4 col-4" data-toggle="modal" data-target="#depositAsset"><img src="../Includes/icons/send.png" alt="send" width="33"><br>DEPOSIT</div>
+<div class="col-sm-4 col-xl-4 col-md-4 col-4" data-toggle="modal" data-target="#withdrawAsset"><img src="../Includes/icons/qr.png" alt="receive" width="33"><br>WITHDRAW</div>
 </div>
 </div>
+  
+  <!-- withdraw modal starts -->
+  <div class="modal" id="withdrawAsset">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+  
+		<!-- Modal Header -->
+		<div class="modal-header">
+		  <h4 class="modal-title text-dark">Withdraw</h4>
+		  <button type="button" class="close" data-dismiss="modal">&times;</button>
+		</div>
+  
+		<!-- Modal body -->
+		<div class="modal-body text-dark">
+			<form action="" novalidate id="withdrawForm">
+				<div class="form-group">
+				  <label for="asset">Asset:</label>
+				  <input type="asset" class="form-control" id="asset">
+				</div>
+				<div class="form-group">
+				  <label for="amount">Amount:</label>
+				  <input type="number" class="form-control" id="amount">
+				</div>
+				<div class="form-group">
+					<label for="address">Address:</label>
+					<input type="number" class="form-control" id="address">
+				  </div>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			  </form>
+		</div>
+  
+		<!-- Modal footer -->
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+		</div>
+  
+	  </div>
+	</div>
+  </div>
+
+  <!-- deposit modal starts -->
+  <div class="modal" id="depositAsset">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+  
+		<!-- Modal Header -->
+		<div class="modal-header">
+		  <h4 class="modal-title text-dark">Deposit</h4>
+		  <button type="button" class="close" data-dismiss="modal">&times;</button>
+		</div>
+  
+		<!-- Modal body -->
+		<div class="modal-body text-dark">
+			<form action="" novalidate id="depositForm">
+				<div class="form-group">
+				  <label for="asset">Asset:</label>
+				  <input type="asset" class="form-control" id="asset">
+				</div>
+				<div class="form-group">
+				  <label for="amount">Amount:</label>
+				  <input type="number" class="form-control" id="amount">
+				</div>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			  </form>
+		</div>
+  
+		<!-- Modal footer -->
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+		</div>
+  
+	  </div>
+	</div>
+  </div>
+
 	<!--Accessibility block ends-->
 	
 <!--Local Currency Starts-->
@@ -47,23 +125,56 @@
 <!--Assets Starts-->
 
 <div class="container-fluid mt-4 col-lg-6">
-	<p class="text-muted">ASSETS</p>
+	<h5 class="text-muted font-weight-bold">ASSETS</h5>
 	<div class="row col-12 col-md-12 col-sm-12 col-lg-12 mx-auto bg-light text-dark p-2 rounded text-left">
-		<div class="col-sm-12 col-xl-12 col-md-12 col-12">&nbsp;&nbsp;<img src="../Includes/icons/ether.png" alt="ETH" width="35" height="40"> ETH :  </div>
+		<div class="d-flex align-items-center col-sm-12 col-xl-12 col-md-12 col-12">&nbsp;&nbsp;
+			<img class="mr-3" src="../Includes/icons/ether.png" alt="ETH" width="15"> 
+			<div>
+				<bold>Ethereum</bold>
+				<div class="d-flex">
+					<div class="mr-3"><small>Withdrawable:</small> <code id="withdrawableETH">0 ETH</code></div>
+					<div class="mr-3"><small>Staked:</small> <code id="stakedETH">0 ETH</code></div>  
+					<div><small>Contributed:</small> <code id="contributedETH">0 ETH</code></div>
+				</div>
+			</div>
+			<div id="totalETH" class="ml-auto">0</div>
+		</div>
 		</div>	
 	</div>
 
 <div class="container-fluid mt-4 col-lg-6">
-	<div class="row col-12 col-md-12 col-sm-12 col-lg-12 mx-auto bg-light text-dark p-2 rounded text-left">
-		<div class="col-sm-12 col-xl-12 col-md-12 col-12">&nbsp;&nbsp;<img src="../Includes/icons/bnb.png" alt="bnb" width="40"> BNB :  </div>
-		</div>	
-	</div>
+		<div class="row col-12 col-md-12 col-sm-12 col-lg-12 mx-auto bg-light text-dark p-2 rounded text-left">
+				<div class="d-flex align-items-center col-sm-12 col-xl-12 col-md-12 col-12">&nbsp;&nbsp;
+					<img class="mr-3" src="../Includes/icons/bnb.png" alt="bnb" width="15"> 
+					<div>
+						<bold>Binance Coin</bold>
+						<div class="d-flex">
+							<div class="mr-3"><small>Withdrawable:</small> <code id="withdrawableBNB">0 BNB</code></div>
+							<div class="mr-3"><small>Staked:</small> <code id="stakedBNB">0 BNB</code></div>  
+							<div><small>Contributed:</small> <code id="contributedBNB">0 BNB</code></div>
+						</div>
+					</div>
+					<div id="totalBNB" class="ml-auto">0</div>
+				</div>
+				</div>	
+			</div>
 
 <div class="container-fluid mt-4 col-lg-6 mb-5">
-	<div class="row col-12 col-md-12 col-sm-12 col-lg-12 mx-auto bg-light text-dark p-2 rounded text-left">
-		<div class="col-sm-12 col-xl-12 col-md-12 col-12">&nbsp;&nbsp;<img src="../Includes/icons/cToken.png" alt="busd" width="70"> cT :  </div>
-		</div>	
-	</div>
+		<div class="row col-12 col-md-12 col-sm-12 col-lg-12 mx-auto bg-light text-dark p-2 rounded text-left">
+				<div class="d-flex align-items-center col-sm-12 col-xl-12 col-md-12 col-12">&nbsp;&nbsp;
+					<img class="mr-3" src="../Includes/icons/cToken.png" alt="CT" width="15"> 
+					<div>
+						<bold>CoinPool Token</bold>
+						<div class="d-flex">
+							<div class="mr-2"><small>Withdrawable:</small> <code>200.453 CT</code></div>
+							<div class="mr-2"><small>Staked:</small> <code>329.9388 CT</code></div>  
+							<div><small>Contributed:</small> <code>300.48 CT</code></div>
+						</div>
+					</div>
+					<div class="ml-auto">200.453</div>
+				</div>
+				</div>	
+			</div>
 <!--Assets Ends-->
 	
 <!--Footer section starts-->
