--- a/Views/viewpool.html
+++ b/Views/viewpool.html
@@ -7,16 +7,21 @@
 <title>CoinPool - View Pool</title>
 <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+<script src="../js/script.js"></script>
 </head>
 
 
-<body style="color: #000000; font-family: 'Poppins'; font-weight: bold;">
+<body style="color: #000000; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
 	<!--Assets Section Starts-->
+<script> $(document).ready(function(){ $("#viewPool").click(); });</script>
+<span class="hidden" id="viewPool"></span>
 <div class="container col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12 mx-auto pt-4 pb-4">
   <div class="row">
 	  <!--Left Pane Area-->
 	  <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8">
-	  	<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-3">ASSET: </div>
+	  	<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-3">ASSET: <p class="font-weight-bolder">BNB</p> </div>
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-3">NAME: </div>
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-3">PRICE: </div>
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-3">CURRENT SLOT: </div>
