--- a/Views/createpool.html
+++ b/Views/createpool.html
@@ -29,20 +29,26 @@
 	    <label for="asset">Select Asset</label>
       <select class="form-control" id="asset" name="asset">
         <option>BNB</option>
-        <option>ETH</option>
-        <option>cToken</option>
+        <option>CT</option>
+        <option>NRC</option>
+        <option>YHWH</option>
+        <option>MDT</option>
+        <option>ZC</option>
       </select>
       </div>
 	  <div class="form-group">
 	    <label for="amount">Amount</label>
-	    <input type="number" class="form-control" id="amount" name="amount" placeholder="Amount">
+	    <input type="number" step='any' class="form-control" id="amount" name="amount" placeholder="Amount">
       </div>
       <div class="form-group">
         <label for="stakeAsset">Select Staking Asset</label>
         <select class="form-control" id="stakeAsset" name="stakeAsset">
           <option>BNB</option>
-          <option>ETH</option>
-          <option>cToken</option>
+					<option>CT</option>
+					<option>NRC</option>
+					<option>YHWH</option>
+					<option>MDT</option>
+					<option>ZC</option>
         </select>
         </div>
 	  <!--<div class="form-check">
