--- a/Views/index.html
+++ b/Views/index.html
@@ -26,9 +26,8 @@
 <!--navigation bar ends-->
 <!--Get Strated Starts-->
 <div class="jumbotron bg-main col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12 mx-auto clearfix">
-<p class="lead"> <a class="btn btn-main btn-lg" href="pool.html" role="button">Get Started <img src="../Includes/icons/arrow.png" alt="arrow"></a><button class="btn btn-main btn-lg ml-3" id="connectAccount">Connect Account</button>
-<img src="../Includes/icons/pattern.png" class="float-right img-fluid" width="300px" height="300px"> 
-
+<p class="lead"> <a class="btn btn-main btn-lg" href="pool.html" role="button">Get Started <img src="../Includes/icons/arrow.png" alt="arrow"></a><img src="../Includes/icons/pattern.png" class="float-right img-fluid" width="300px" height="300px"> 
+<button class="btn btn-main btn-lg ml-3" id="connectAccount">Connect Account</button>
 </p>
 
 <h2 style="color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 21.33px;">The Evolving <br> Defi Crowd Lending <br>Protocol on Binance<br> Smart Chain </h2>
