--- a/Views/viewpool.html
+++ b/Views/viewpool.html
@@ -31,7 +31,7 @@
 	  <!--Right Pane Area-->
 	  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
 	  	<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-1 text-center"><img src="../Includes/icons/cToken.png" alt="busd" width="70" class="mb-2"><br>QTY<br><button class="btn btn-main rounded-pill mt-2 font-weight-bold">TRADE</button></div>
-		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-1 text-center"><big>EARNINGS</big><div id="cycleEarnings">0</div><button class="btn btn-main rounded-pill mt-2 font-weight-bold"><img src="../Includes/icons/lock.svg" alt="locked" width="18em"> PAYIN</button></div>
+		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 bg-light rounded-4 p-3 mb-1 text-center"><big>EARNINGS</big><div id="cycleEarnings">0</div><button class="btn btn-main rounded-pill mt-2 font-weight-bold" id="payin" poolid=""><img src="../Includes/icons/lock.svg" alt="locked" width="18em"> PAYIN</button></div>
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center">
 		<button class="btn btn-main rounded-4 font-weight-bold">VIEW FULL LIST</button>
 		</div>
@@ -64,7 +64,7 @@
 <!--Footer section starts-->
 <footer>
   <div class="footer fixed-bottom">
-  <a href="JavaScript:void(0)"><img src="../Includes/icons/home.png" alt="home" class=""></a>
+  <a href="index.html"><img src="../Includes/icons/home.png" alt="home" class=""></a>
   <a href="vault.html"><img src="../Includes/icons/tf.png" alt="transfer" class=""></a>
   <a href="pool.html"><img src="../Includes/icons/pool.png" alt="pool" class=""></a>
   <a href="market.html"><img src="../Includes/icons/chart.png" alt="market" class=""></a>
